fix: remove overflow property from reviews carousel

--- a/es-bs-base/scss/vue/components/_reviews.scss
+++ b/es-bs-base/scss/vue/components/_reviews.scss
@@ -84,7 +84,6 @@
   --scroll-button-icon-size: 32px !important;
   --small-star-size: 32px !important;
   margin-bottom: 0;
-  overflow: hidden;
 
   .CarouselWidget__header {
     margin-bottom: 32px !important;
